<resources>
    <string name="app_name">CampusBash</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_events">Events</string>
    <string name="title_host">Host</string>
    <string name="event_name">Enter event name</string>
    <string name="date_text">Mon, Jan 1, 2018</string>
    <string name="event_time">15:00</string>
    <string name="event_starts">Event starts</string>
    <string name="event_ends_text">Event ends</string>
    <string name="save_event">SAVE EVENT</string>
    <string name="description_title">Description</string>
    <string name="facebook_app_id">154707055152249</string>
    <string name="facebook_application_id" translatable="false">154707055152249</string>
    <string name="fb_login_protocol_scheme">fb154707055152249</string>
    <string name="get_ticket">GET TICKET</string>
    <string name="title_profile">Profile</string>
    <string name="country">Country</string>
    <string name="university">University</string>
    <string name="next">Next</string>
    <string name="whats_happening">What\'s happening in</string>
    <string name="find_hottest_parties">Find the hottest parties</string>
    <string name="host_coolest_parties">Host the coolest parties</string>
    <string name="Description1Onboarding">CampusBash helps you find and host the hottest parties and events on your campus</string>
    <string name="Description2Onboarding">Take the work out of getting lit and just focus on getting lit</string>
    <string name="Description3Onboarding">Hosting parties are hard, lets make it dead easy. Trust us…</string>
    <string name="title_activity_onboard_sign_in">OnboardSignInActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="add_interest">Add interest</string>
    <string name="zero_items_selected">0 items selected</string>
    <string name="items_at_least_two">You have to pick at least 2 items</string>
    <string name="sign_out">Sign Out</string>
    <string name="interests">Interests</string>
    <string name="title_activity_interests">Interests</string>
    <string name="update_interests">Update Interests</string>
    <string name="title_activity_on_boarding">OnBoardingActivity</string>
    <string name="ad_attribution">Ad</string>
    <string name="admob_app_id">ca-app-pub-6048560905035130~3362797617</string>
    <string name="admob_app_id_debug">ca-app-pub-3940256099942544/2247696110</string>
    <string name="about_title">About</string>
    <string name="see_more">See more</string>
    <string name="location">Location</string>
    <string name="host">Host</string>
    <string name="address">Address</string>
    <string name="search_address">Search venue or address</string>
    <string name="free_event">This event is free</string>
    <string name="no_tickets">No tickets</string>
    <string name="event_description_hint">Enter event description</string>
    <string name="select_country">Select country</string>
    <string name="select_university">Select university</string>
    <string name="ticket_name">TICKET NAME</string>
    <string name="ticket_description">TICKET DESCRIPTION</string>
    <string name="ticket_quantity">TICKET QUANTITY</string>
    <string name="ticket_price">TICKET PRICE</string>
    <string name="currency">CURRENCY</string>
    <string name="select_currency">Select currency</string>
    <string name="visible">Visible</string>
    <string name="search_for">Search for …</string>
    <string name="no_events">No events found</string>
    <string name="share">Share</string>
    <string name="edit">Edit</string>
    <string name="sold_out">Sold out</string>
    <string name="total">Total</string>
    <string name="stripe_message">You need to create a Stripe account to accept payments.</string>
    <string name="create_stripe_account">Create Stripe account</string>
    <string name="please_wait">Please wait</string>
    <string name="stripe_account_created">Stripe account created</string>
    <string name="stripe_account_failed">Failed to create Stripe account</string>
    <string name="buyer_total">Buyer total: $%s</string>
    <string name="see_breakdown">See breakdown</string>
    <string name="price_breakdown">Price Breakdown</string>
    <string name="ticket_fee">Ticket Fee</string>
    <string name="price_value">%1s%2.2f</string>
    <string name="service_fee">Service Fee</string>
    <string name="payment_fee">Payment Fee</string>
    <string name="total_fee">Total Fee</string>
    <string name="debit_card_digits">%1s ending with %2s</string>
    <string name="no_card_found">No card found</string>
    <string name="save">save</string>
    <string name="use_google_pay">Do you want to use Google Pay?</string>
    <string name="could_not_validate_card">Could not validate this card</string>
    <string name="address_must_be_set">Address must be set</string>
    <string name="end_date_greater_start_date">End date must be after start date</string>
    <string name="university_must_be_set">University must be set</string>
    <string name="event_ended">This event has ended</string>
    <string name="max_value_is_x">Max value is %1d</string>
    <string name="max_price_ticket">Max price is 950000</string>
    <string name="event_saved">Event saved</string>
    <string name="event_save_failed">Failed to save event</string>
    <string name="no_ticket_purchased">No ticket purchased</string>
    <string name="sure_you_want_to_leave">Are you sure you want to leave?</string>
    <string name="uploading_event">Uploading event</string>
    <string name="uploading_media">Uploading media</string>
    <string name="must_add_1_ticket">You must add one ticket</string>
    <string name="not_signed_in">You\'re not signed in</string>
    <string name="ticket_purchased">Ticket purchased</string>
    <string name="could_not_purchase_ticket">Ticket purchased</string>
    <string name="error_occurred">An error occurred</string>
    <string name="error_occurred_g_pay">An error occurred with Google Pay</string>
    <string name="could_not_get_location">Could not get location</string>
    <string name="place_name_address">%1s | %2s</string>
    <string name="field_must_be_set">Field must be set</string>
    <string name="field_cant_be_empty">Field can\'t be empty</string>
    <string name="field_must_be_greater_zero">Field must be greater than zero</string>
    <string name="set_up_stripe">Setup stripe</string>
    <string name="welcome_to_cbash">Welcome to CampusBash</string>
    <string name="x_items_selected">%1d items selected</string>
    <string name="hosted_by_x">hosted by %1s</string>
    <string name="price">%1s%2.2f</string>
    <string name="one_ticket_price">%1.2f</string>
    <string name="free_to_x">0 - %1s</string>
    <string name="minPrice_to_maxPrice">%1s%2.2f - %3s%4.2f</string>
    <string name="x_to_y">%1s - %2s</string>
    <string name="price_currency_value">%1s%2.2f</string>
    <string name="ticket_quantity_one">1 ticket</string>
    <string name="ticket_quantity_with_params">%1d tickets</string>
    <string name="free_caps">Free</string>
    <string name="event_card_transition">Event card transition</string>
    <string name="what_type_of_event">What type of event is this?</string>
    <string name="select_type">Select type</string>
    <string name="when_it_starts">When does it start?</string>
    <string name="when_it_ends">When does it end?</string>
    <string name="where_its_happening">Where is it happening?</string>
    <string name="search_an_address">Search an address</string>
    <string name="add_tickets">Add tickets</string>
    <string name="got_tickets">Got any tickets?</string>
    <string name="where_is_closest_uni">Where is the closest university?</string>
    <string name="ticket_name_entry">Enter ticket name</string>
    <string name="ticket_desc_entry">Enter ticket description</string>
    <string name="ticket_quantity_entry">Enter ticket quantity</string>
    <string name="ticket_price_entry">Enter ticket price</string>
    <string name="enter_username">Enter username</string>
    <string name="enter_summary_yourself">Enter summary of yourself</string>
    <string name="no_tickets_here">No tickets here</string>
    <string name="tickets">Tickets</string>
    <string name="starts_on_x">Starts on %1s</string>
    <string name="my_events">My Events</string>
    <string name="profile">Profile</string>
    <string name="select_quantity">Select quantity</string>
    <string name="tickets_left">%1d tickets left</string>
    <string name="ticket_left">1 ticket left</string>
    <string name="number_available">$1d available</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="log_out">Log out</string>
    <string name="edit_interests">Edit interests</string>
    <string name="show_road">Let\'s get this show on the road. What sounds like fun?</string>
    <string name="lets_get_lit">Let\'s get lit</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="title_activity_event_dashboard">EventDashboardActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="no_tickets_to_scan">No tickets to scan</string>
    <string name="ticket_used">This ticket has been used</string>
    <string name="ticket_valid">This ticket is valid!</string>
    <string name="ticket_invalid">This ticket is invalid</string>
    <string name="nothing_scanned_yet">Nothing scanned yet</string>
    <string name="scanner">Scanner</string>
    <string name="tickets_sold">Tickets sold</string>
    <string name="ticket_sold_available">%1d / %2d</string>
    <string name="sales">SALES</string>
    <string name="camera_vibrate_permission">CampusBash would like to use your camera to scan bar-codes. Would you like to grant it access?</string>
    <string name="stripe_account_exists_connect">Seems like you already have a stripe account. Would you like to connect it to CampusBash?</string>
    <string name="no_internet">No internet connection</string>
    <string name="try_again">try again</string>
    <string name="share_with">Share with</string>
    <string name="account_not_setup_payments">Your account is not setup to receive payments. Would you like to set it up now?</string>
    <string name="stripe_info">CampusBash use stripe to manage </string>
    <string name="stripe_setup_info">In order to receive payments on CampusBash, we need to create an account for you on Stripe - our 3rd party payments provider. Stripe will help you monitor the income from your all your CampusBash ticket purchases. They will also make payouts to your bank account 7 days after any amount is spent on your CampusBash tickets. You can find out more here.</string>
    <string name="enter_student_id">Enter student id</string>
    <string name="featured_emoji">Featured %1s</string>
    <string name="student_id_entry_reason">This field helps us determine whether to show you faculty FROSH events.</string>
    <string name="field_can_not_be_empty">This field can not be empty</string>
    <string name="student_id_exists">This student id already exists</string>
    <string name="could_not_verify_student_id">Oops, we could not verify your student id</string>
    <string name="exit_without_saving_card">Are you sure you want to leave without saving your card?</string>
    <string name="max_image_size">Max image size is 5MB</string>
    <string name="add_new_card">Add a new card</string>
    <string name="share_event">Share Event</string>
    <string name="one_university_selected">1 university selected</string>
    <string name="x_universities_selected">%1d universities selected</string>
</resources>